--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
   <div class="main-wrap">
     <header>
       <h1>
-        <a href="/">Healthree</a>
+        Health Buddy
       </h1>
       <nav class="main-nav">
         <a href="/about-us">About Us/Our Team</a>
