edit to footer in main handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -60,7 +60,7 @@
   <footer>
     Health Buddy
     1 King Street West
-    Tornto, ON M5A 2C4
+    Toronto, ON M5A 2C4
     <a href="/contact-us">Contact Us</a>
   </footer>
   {{#if loggedIn}}
