--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -56,8 +56,13 @@
       {{/if}}
 
       {{else}}
-      <button id="bmi-btn">Check BMI</button>
-      <button id="who-btn">Who Should I See?</button>
+      <div class="main-bg">
+        <img src="../images/healthbuddybg.png" alt="" width="1000" height="600">
+      </div>
+      <div class="main-btn">
+        <button id="bmi-btn">Check BMI</button>
+        <button id="who-btn">Who Should I See?</button>
+      </div>
       {{/if}}
     </main>
   </div>
