--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,11 @@
     </header>
     {{!-- make background for main a picture --}}
     <main class="main-main">
-      {{#if loggedIn}}
+      
+      {{ body }}
+
+    {{!-- previous loggin code --}}
+      {{!-- {{#if loggedIn}}
       <button id="patient-btn">New Patient</button>
       <button id="edit-btn">Edit File</button>
       <button id="delete-btn">Delete File</button>
@@ -44,7 +48,7 @@
           <li style="list-style-type: none;">
             {{> patient-information patient}}
             {{!--/maim/edit/{{patient.id}} --}}
-            <a href="/edit/{{patient.id}}" id="edit-patient-btn">Edit</a>
+            {{!-- <a href="/edit/{{patient.id}}" id="edit-patient-btn">Edit</a>
             <button id="delete-patient-btn">Delete</button>
           </li>
           {{/each}}
@@ -55,7 +59,7 @@
       {{else}}
       <button id="bmi-btn">Check BMI</button>
       <button id="who-btn">Who Should I See?</button>
-      {{/if}}
+      {{/if}} --}}
     </main>
   </div>
   <footer>
