--- a/views/partials/patient-information.handlebars
+++ b/views/partials/patient-information.handlebars
@@ -1,7 +1,7 @@
 <article class="patient">
   <div class="patient-layout">
     <div class="patient-title-style">
-      <h3 class="patient-title">{{title}}</h3>
+      <h3 class="patient-title">{{patient.title}}</h3>
     </div>
     <div class="patient-description-style">
       <p>{{patient_description}}</p>
