--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -33,7 +33,7 @@
     {{!-- make background for main a picture --}}
     <main class="main-main">
       
-      {{ body }}
+      {{{ body }}}
 
     {{!-- previous loggin code --}}
       {{!-- {{#if loggedIn}}
