--- a/views/partials/doctor-information.handlebars
+++ b/views/partials/doctor-information.handlebars
@@ -1,10 +1,10 @@
 <article class="doctor">
   <div class="doctor-layout">
     <div class="doctor-title-style">
-      <h3 class="doctor-title">{{doctor.title}}</h3>
+      <h3 class="doctor-title">{{name}}</h3>
     </div>
     <div class="doctor-description-style">
-      <p>{{doctor_description}}</p>
+      <p>{{speciality}}</p>
     </div>
     <button>Remove</button>
   </div>
