--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -87,16 +87,15 @@ form label {
 }
 
 .main-btn {
-  margin-top: -40%;
+  margin-top: -25%;
 }
 
 header {
   border-bottom: 1px solid #1cccd3;
-  background-color: #ffffff;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: .5% 1%;
+  padding: .025% 1%;
 }
 
 
@@ -175,6 +174,7 @@ footer {
   color: #1cccd3;
   display: flex;
   justify-content: space-between;
+
   padding: .5%;
   font-size: 110%;
   font-style: italic;
@@ -185,9 +185,11 @@ footer {
 .footer-address {
   font-size: medium;
   color: #1f2b5b;
+  margin-top: 1.5%;
 }
 
 .footer-copy {
   font-size: small;
   color: #1f2b5b;
+  margin-top: .75%;
 }
