--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,13 +17,12 @@
 <body>
   <div class="main-wrap">
     <header>
-      <img src="../images/healthbuddywhite.png" alt="" width="400" height="125">
+      <a href="/"><img src="../images/healthbuddywhite.png" alt="" width="400" height="125"></a>
       <nav class="main-nav">
-        <a href="/about-us">About Us/Our Team</a>
+        <a href="https://github.com/healthree/health-buddy">About Us/Our Team</a>
         {{#if loggedIn}}
         {{!-- Change to respective javascript name --}}
         {{!-- <h3>Welcome {{ user.name }}</h3> --}}
-        <a href="/dashboard">Patient Information</a>
         <button id="logout" class="btn-no-style">Signout</button>
         {{else}}
         <a href="/login">Admin Access</a>
