--- a/views/partials/client-information.handlebars
+++ b/views/partials/client-information.handlebars
@@ -4,7 +4,7 @@
   </div>
   {{#each clients}}
     <div class="card-body">
-      <h6 class="card-title">{{name}}</h6>
+      <a href="/client/{{id}}"><h6 class="card-title">{{name}}</h6></a>
       <h6 class="card-subtitle mb-2 text-muted">
         {{symptoms}}</h6>
       <i><p class="card-text">medical_history: {{medical_history}}</p></i>
