--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,12 +17,13 @@
 <body>
   <div class="main-wrap">
     <header>
-      <a href="/"><img src="../images/healthbuddywhite.png" alt="" width="400" height="125"></a>
+      <img src="../images/healthbuddywhite.png" alt="" width="400" height="125">
       <nav class="main-nav">
-        <a href="https://github.com/healthree/health-buddy">About Us/Our Team</a>
+        <a href="/about-us">About Us/Our Team</a>
         {{#if loggedIn}}
         {{!-- Change to respective javascript name --}}
         {{!-- <h3>Welcome {{ user.name }}</h3> --}}
+        <a href="/dashboard">Patient Information</a>
         <button id="logout" class="btn-no-style">Signout</button>
         {{else}}
         <a href="/login">Admin Access</a>
@@ -31,37 +32,15 @@
     </header>
     {{!-- make background for main a picture --}}
     <main class="main-main">
-      
-      {{{ body }}}
-
-    {{!-- previous loggin code --}}
-      {{!-- {{#if loggedIn}}
-      <button id="patient-btn">New Patient</button>
-      <button id="edit-btn">Edit File</button>
-      <button id="delete-btn">Delete File</button>
-      <button id="access-btn">View File</button>
-      <button id="doctors-btn">Doctors List</button>
-
-      {{#if patients.length}}
-      <section>
-        <h2>Your Patients:</h2>
-        <ol>
-          {{#each patients as |patient|}}
-          <li style="list-style-type: none;">
-            {{> patient-information patient}}
-            {{!--/maim/edit/{{patient.id}} --}}
-            {{!-- <a href="/edit/{{patient.id}}" id="edit-patient-btn">Edit</a>
-            <button id="delete-patient-btn">Delete</button>
-          </li>
-          {{/each}}
-        </ol>
-      </section>
+      {{#if loggedIn}}
+      <div class="main-bg">
+        <img src="../images/healthbuddybg.png" alt="" width="1000" height="600">
+      </div>
+      <div class="main-btn">
+        <button id="bmi-btn">Check BMI</button>
+        <button id="who-btn">Who Should I See?</button>
+      </div>
       {{/if}}
-
-      {{else}}
-      <button id="bmi-btn">Check BMI</button>
-      <button id="who-btn">Who Should I See?</button>
-      {{/if}} --}}
     </main>
   </div>
   <footer>
