--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -19,7 +19,7 @@
     <header>
       <a href="/"><img src="../images/healthbuddywhite.png" alt="" width="400" height="125"></a>
       <nav class="main-nav">
-        <a href="/https://github.com/healthree/health-buddy">About Us/Our Team</a>
+        <a href="https://github.com/healthree/health-buddy">About Us/Our Team</a>
         {{#if loggedIn}}
         {{!-- Change to respective javascript name --}}
         {{!-- <h3>Welcome {{ user.name }}</h3> --}}
