--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,4 +4,5 @@
 <div class="main-btn">
   <a href="/bmi"><button id="bmi-btn">Check BMI</button></a>
   <a href="/doctor"><button id="who-btn">Who Should I See?</button></a>
+  <a href="/issue"><button id="issue-btn">Health Issue Details</Details></button></a>
 </div>
