--- a/views/BMI.handlebars
+++ b/views/BMI.handlebars
@@ -18,7 +18,7 @@
       </form>
     </div>
     <div class="col">
-      <div class="card text-bg-primary mb-3 ml-5" style="max-width: 10rem;">
+      <div class="card text-bg-light mb-3 ml-5" style="max-width: 10rem;" id = "BMIheader">
         <div class="card-header" id="result-header">BMI Rate</div>
         <div class="card-body">
           <p class="card-text" id="result-content"></p>
