--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -40,10 +40,32 @@
     </main>
   </div>
   <footer>
-    <a href="/contact-us">Contact Us</a>
+    <div class="footer-logo">
+      <img src="../images/healthbuddy-footerA.png" alt="" width="90" height="75">
+    </div>
+    <div class="footer-address">
+      1 King Street West
+      Toronto, ON M5A 2C4
+      (416) 555-5555
+    </div>
+    <div class="footer-copy">
+      <p><span>Made by team Healthree</p>
+      &copy; 2022 Health Buddy, Inc.
+    </div>
   </footer>
   {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
+  <script src="/javascript/edit-patient.js"></script>
+  <script src="/javascript/delete-patient.js"></script>
   {{/if}}
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
 </body>
 </html>
