update signup, doctor edit

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,14 +1,15 @@
 <form class="login-form">
   <div class="login-form-email">
     <label for="email-login" style="">Email:</label>
-    <input type="text" id="email-login" size="50" />
+    <input type="text" id="email-login" class="form-control" size="50" />
   </div>
   <div>
     <label for="password-login" style="">Password:</label>
-    <input type="password" id="password-login" size="50" />
+    <input type="password" id="password-login" class="form-control" size="50" />
   </div>
   <div>
-    <button type="submit">Login</button>
+    <button type="submit" class="mt-3">Login</button>
+    <a href="/signup">Sign Up Instead</a>
   </div>
 </form>
 
