--- a/views/partials/single-client-information.handlebars
+++ b/views/partials/single-client-information.handlebars
@@ -1,12 +1,8 @@
 <form class="edit-client">
-  <h3 class="invisible" id = "doctors_id">{{doctors_id}}</h3>
+  <h3 class="invisible" id="doctors_id">{{doctors_id}}</h3>
   <div class="mb-3">
     <label for="client-name" class="form-label">Client Name</label>
-    <textarea
-      class="form-control"
-      id="client-name"
-      rows="1"
-    >{{name}}</textarea>
+    <textarea class="form-control" id="client-name" rows="1">{{name}}</textarea>
   </div>
   <div class="mb-3">
     <label for="Symptoms" class="form-label">Symptoms</label>
@@ -30,7 +26,6 @@
     id="delete-post"
     class="btn btn-danger delete-post-btn"
   >Delete</button>
-</section>
 </form>
 
 <script src="/javascript/edit-client.js"></script>
