--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,14 +10,14 @@
 <body>
   <div class="main-wrap">
     <header>
-
+      {{#if loggedIn}}
+      <a href="/dashboard"><img src="../images/healthbuddywhite.png" alt="" width="400" height="125"></a>
+      {{else}}
       <a href="/"><img src="../images/healthbuddywhite.png" alt="" width="400" height="125"></a>
+      {{/if}}
       <nav class="main-nav">
         <a href="/about-us">About Us/Our Team</a>
         {{#if loggedIn}}
-        {{!-- Change to respective javascript name --}}
-        {{!-- <h3>Welcome {{ user.name }}</h3> --}}
-        <a href="/dashboard">Patient Information</a>
         <button id="logout" class="btn-no-style">Signout</button>
         {{else}}
         <a href="/login">Admin Access</a>
@@ -27,23 +27,38 @@
     {{!-- make background for main a picture --}}
     <main class="main-main">
       {{#if loggedIn}}
-      <div class="main-bg">
-        <img src="../images/healthbuddybg.png" alt="" width="1000" height="600">
-      </div>
-      <div class="main-btn">
-        <button id="bmi-btn">Check BMI</button>
-        <button id="who-btn">Who Should I See?</button>
-      </div>
-      {{/if}}
+      {{{body}}}
+      {{else}}
     <main>
       {{{body}}}
+      {{/if}}
     </main>
   </div>
   <footer>
-    <a href="/contact-us">Contact Us</a>
+    <div class="footer-logo">
+      <img src="../images/healthbuddy-footerA.png" alt="" width="90" height="75">
+    </div>
+    <div class="footer-address">
+      1 King Street West
+      Toronto, ON M5A 2C4
+      (416) 555-5555
+    </div>
+    <div class="footer-copy">
+      <p><span>Made by team Healthree</p>
+      &copy; 2022 Health Buddy, Inc.
+    </div>
   </footer>
   {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
   {{/if}}
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
 </body>
 </html>
