--- a/views/partials/doctor-information.handlebars
+++ b/views/partials/doctor-information.handlebars
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card mb-3">
   <div class="card-body">
     <a href="/doctor/{{id}}"><h5 class="card-title">{{name}}</h5></a>
     <h6 class="card-subtitle mb-2 text-muted">
