--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,7 @@
       <a href="/"><img src="../images/healthbuddywhite.png" alt="" width="400" height="125"></a>
       {{/if}}
       <nav class="main-nav">
-        <a href="/about-us">About Us/Our Team</a>
+        <a href="/https://github.com/healthree/health-buddy">About Us/Our Team</a>
         {{#if loggedIn}}
         <button id="logout" class="btn-no-style">Signout</button>
         {{else}}
